# ZBilliards

./: .gitmodules  CMakeLists (AS MAC APP).txt  CMakeLists.txt  Info.plist.in  Linux README.txt  README.md  billiards.command  billiards.cpp  billiards.h  billiards.hpp  fusemanager.hpp  jwz.h  jwzsfml.h  objects.hpp  sfmlApp.cpp  sfmlApp.hpp
.github/: ci1.yml  ci2.yml
.github/workflows/: ci.yml  release.yml
resources/: bill.piko  resources.txt
src/: billiards.cpp  billiards.hpp  embedded.hpp  main.cpp  objects.hpp  sfmlApp.cpp  sfmlApp.hpp
src/embedded_data/: BigBook-Heavy.hpp  arrowicon.hpp  ball.hpp  cue.hpp  cueball.hpp  cueshot.hpp  hurt2.hpp  railbump.hpp  rockHit2.hpp
